상태 파일 업데이트