@@ -1,210 +1,155 @@
 package com.solarwise.capstonebackend.service;
 
-import com.solarwise.capstonebackend.dto.AnomalyMarkerDto;
-import com.solarwise.capstonebackend.dto.DashboardResponse;
+import com.solarwise.capstonebackend.dto.DashboardSummaryDto;
 import com.solarwise.capstonebackend.dto.DashboardTimelineResponse;
-import com.solarwise.capstonebackend.dto.GapPointDto;
-import com.solarwise.capstonebackend.dto.TimePointDto;
+import com.solarwise.capstonebackend.dto.GapDto;
+import com.solarwise.capstonebackend.dto.MeasurementDto;
 import com.solarwise.capstonebackend.entity.Anomaly;
+import com.solarwise.capstonebackend.entity.Forecast;
 import com.solarwise.capstonebackend.entity.PlantFeatureLog;
-import com.solarwise.capstonebackend.entity.PowerPlant;
 import com.solarwise.capstonebackend.exception.ResourceNotFoundException;
 import com.solarwise.capstonebackend.repository.AnomalyRepository;
+import com.solarwise.capstonebackend.repository.ForecastRepository;
 import com.solarwise.capstonebackend.repository.PlantFeatureLogRepository;
 import com.solarwise.capstonebackend.repository.PowerPlantRepository;
 import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
+import java.time.LocalTime;
 import java.util.List;
-import java.util.Locale;
+import java.util.stream.Collectors;
 
-/**
- * 대시보드 서비스
- * - 프론트엔드 차트 데이터 집계
- */
-@Slf4j
 @Service
 @RequiredArgsConstructor
+@Transactional(readOnly = true)
 public class DashboardService {
 
     private final PowerPlantRepository powerPlantRepository;
-    private final EnergyAggregationService energyAggregationService;
-    private final AnomalyService anomalyService;
-    private final SimulationService simulationService;
-    private final AnomalyRepository anomalyRepository;
     private final PlantFeatureLogRepository plantFeatureLogRepository;
+    private final ForecastRepository forecastRepository;
+    private final AnomalyRepository anomalyRepository;
+    private final SimulationService simulationService;
 
-    // 인메모리 캐시를 사용하여 초당 반복 호출 시 DB 부하를 줄입니다.
-    // 주의: 이 캐시 로직은 시연용으로 단순화되어 있으며, 실제 운영 시에는
-    // 캐시 무효화 전략과 분산 캐시 고려가 필요합니다. 이 부분은 팀원과 스키마 변경 공유가 필요합니다.
-    private final java.util.concurrent.ConcurrentHashMap<Long, DashboardTimelineResponse> timelineCache = new java.util.concurrent.ConcurrentHashMap<>();
-    private final java.util.concurrent.ConcurrentHashMap<Long, java.time.LocalDateTime> timelineCacheVirtualNow = new java.util.concurrent.ConcurrentHashMap<>();
-
-    /**
-     * 발전소 대시보드 조회
-     */
-    public DashboardResponse getDashboard(Long powerPlantId, LocalDateTime startTime, LocalDateTime endTime) {
-        PowerPlant plant = powerPlantRepository.findById(powerPlantId)
+    public DashboardSummaryDto getDashboardSummary(Long plantId, Long userId) {
+        powerPlantRepository.findByIdAndUserId(plantId, userId)
                 .orElseThrow(() -> new ResourceNotFoundException("발전소를 찾을 수 없습니다."));
 
-        // ✅ FIXED: 가상 시간 기준으로 조회 (파라미터가 없으면 가상 현재 시간 사용)
         LocalDateTime virtualNow = simulationService.getVirtualCurrentTime();
-        LocalDateTime actualEndTime = endTime != null ? endTime : virtualNow;
+        
+        LocalDateTime todayStart = virtualNow.toLocalDate().atStartOfDay();
+        List<PlantFeatureLog> todayLogs = plantFeatureLogRepository
+                .findByPowerPlantIdAndMeasuredAtBetweenOrderByMeasuredAtAsc(plantId, todayStart, virtualNow);
 
-        return DashboardResponse.builder()
-                .powerPlantId(powerPlantId)
-                .plantName(plant.getName())
-                .dateRange(actualEndTime)
-                .energyData(energyAggregationService.getAggregatedEnergyData(powerPlantId, startTime, actualEndTime))
-                .recentAnomalies(anomalyService.getRecentAnomalies(powerPlantId, 10))
+        // 💡 처방 3: '현재 발전량'을 오늘 데이터 중 가장 마지막 값으로 계산
+        Double currentPowerKw = todayLogs.isEmpty() ? 0.0 : 
+            todayLogs.get(todayLogs.size() - 1).getActual();
+        currentPowerKw = (currentPowerKw == null) ? 0.0 : currentPowerKw;
+
+        double todayGenerationKwh = todayLogs.stream()
+                .mapToDouble(log -> log.getActual() != null ? log.getActual() : 0.0)
+                .sum();
+        double todayForecastedKwh = todayLogs.stream()
+                .mapToDouble(log -> log.getPrediction() != null ? log.getPrediction() : 0.0)
+                .sum();
+
+        double efficiencyPercent = 0.0;
+        if (todayForecastedKwh > 0) {
+            efficiencyPercent = (todayGenerationKwh / todayForecastedKwh) * 100;
+        }
+
+        Anomaly latestAnomaly = anomalyRepository.findByPowerPlantIdOrderByDetectedAtDesc(plantId).stream().findFirst().orElse(null);
+        DashboardSummaryDto.AnomalyInfo anomalyInfo = (latestAnomaly != null) ?
+                DashboardSummaryDto.AnomalyInfo.builder()
+                        .exists(true)
+                        .eventId(latestAnomaly.getId())
+                        .severity(latestAnomaly.getSeverity())
+                        .summary(latestAnomaly.getSummary())
+                        .build() :
+                DashboardSummaryDto.AnomalyInfo.builder().exists(false).build();
+
+        return DashboardSummaryDto.builder()
+                .currentPowerKw(currentPowerKw)
+                .todayGenerationKwh(todayGenerationKwh)
+                .todayForecastedKwh(todayForecastedKwh)
+                .efficiencyPercent(efficiencyPercent)
+                .lastUpdatedAt(virtualNow)
+                .latestAnomaly(anomalyInfo)
                 .build();
     }
 
-    /**
-     * 대시보드 타임라인 통합 조회
-     * - 실측(과거~현재), 예측(과거~미래), 괴리, 이상 마커를 한 번에 제공합니다.
-     */
-    public DashboardTimelineResponse getDashboardTimeline(
-            Long powerPlantId,
-            Long userId,
-            String range,
-            Integer futureHours,
-            LocalDateTime to
-    ) {
-        powerPlantRepository.findByIdAndUserId(powerPlantId, userId)
+    public DashboardTimelineResponse getDashboardTimeline(Long plantId, Long userId, String range, Integer futureHours, LocalDateTime to) {
+        powerPlantRepository.findByIdAndUserId(plantId, userId)
                 .orElseThrow(() -> new ResourceNotFoundException("발전소를 찾을 수 없습니다."));
 
-        LocalDateTime virtualNow = simulationService.getVirtualCurrentTime();
-        LocalDateTime windowEnd = to != null ? to : virtualNow;
+        LocalDateTime now = simulationService.getVirtualCurrentTime();
+        LocalDateTime requestEnd = (to != null) ? to : now;
+        
+        LocalDateTime start;
+        LocalDateTime end;
 
-        TimelineRange timelineRange = TimelineRange.from(range);
-        LocalDateTime windowStart = windowEnd.minusHours(timelineRange.windowHours());
-
-        int resolvedFutureHours = futureHours != null
-                ? Math.max(0, Math.min(futureHours, 24 * 14))
-                : timelineRange.defaultFutureHours();
-        LocalDateTime forecastEnd = windowEnd.plusHours(resolvedFutureHours);
-
-        // 캐시 체크: 시뮬레이션의 마지막 tick 시점(lastTickAt)을 기준으로 캐시 갱신 여부 판단
-        java.time.LocalDateTime lastTick = simulationService.getLastTickAt();
-        DashboardTimelineResponse cached = timelineCache.get(powerPlantId);
-        java.time.LocalDateTime cachedVirtualNow = timelineCacheVirtualNow.get(powerPlantId);
-
-        if (cached != null && cachedVirtualNow != null && lastTick != null && !lastTick.isAfter(cachedVirtualNow)) {
-            // 시뮬레이션이 전진하지 않았다면 캐시된 응답 반환
-            return cached;
+        switch (range.toUpperCase()) {
+            case "HOUR":
+                start = requestEnd.minusHours(1);
+                end = requestEnd;
+                break;
+            case "WEEK":
+                start = requestEnd.minusWeeks(1);
+                end = requestEnd;
+                break;
+            case "MONTH":
+                start = requestEnd.minusMonths(1);
+                end = requestEnd;
+                break;
+            case "DAY":
+            default:
+                start = requestEnd.minusDays(1);
+                end = requestEnd;
+                break;
         }
 
-        // 실제 DB 조회 (초기 1회 또는 시뮬레이션이 전진했을 때만 수행)
-        List<PlantFeatureLog> actualLogs = plantFeatureLogRepository
-                .findByPowerPlantIdAndMeasuredAtBetweenOrderByMeasuredAtAsc(powerPlantId, windowStart, windowEnd);
-        List<PlantFeatureLog> predictionLogs = plantFeatureLogRepository
-                .findByPowerPlantIdAndMeasuredAtBetweenOrderByMeasuredAtAsc(powerPlantId, windowStart, forecastEnd);
-        List<Anomaly> anomalies = anomalyRepository
-                .findByPowerPlantIdAndDetectedAtBetweenOrderByDetectedAtAsc(powerPlantId, windowStart, windowEnd);
-
-        List<TimePointDto> actualSeries = actualLogs.stream()
-                .filter(log -> log.getActual() != null)
-                .map(log -> TimePointDto.builder()
-                        .ts(log.getMeasuredAt())
-                        .value(log.getActual())
+        List<PlantFeatureLog> actualLogs = plantFeatureLogRepository.findByPowerPlantIdAndMeasuredAtBetweenOrderByMeasuredAtAsc(plantId, start, end);
+        List<MeasurementDto> actualSeries = actualLogs.stream()
+                .map(log -> MeasurementDto.builder()
+                        .measuredAt(log.getMeasuredAt())
+                        .powerKw(log.getActual())
+                        .temperature(log.getTemp())
+                        .irradiance(log.getIrradiance())
+                        .humidity(log.getHumi())
                         .build())
-                .toList();
+                .collect(Collectors.toList());
 
-        List<TimePointDto> predictionSeries = predictionLogs.stream()
-                .filter(log -> log.getPrediction() != null)
-                .map(log -> TimePointDto.builder()
-                        .ts(log.getMeasuredAt())
-                        .value(log.getPrediction())
+        LocalDateTime futureEnd = end.plusHours(futureHours != null ? futureHours : 72);
+        List<Forecast> forecastLogs = forecastRepository.findByPowerPlantIdAndTargetTimeBetween(plantId, start, futureEnd);
+        List<MeasurementDto> predictionSeries = forecastLogs.stream()
+                .map(log -> MeasurementDto.builder()
+                        .measuredAt(log.getTargetTime())
+                        .powerKw(log.getPredictedPowerKw())
                         .build())
-                .toList();
+                .collect(Collectors.toList());
 
-        List<GapPointDto> gapSeries = actualLogs.stream()
-                .filter(log -> log.getActual() != null && log.getPrediction() != null)
-                .map(this::toGapPoint)
-                .toList();
+        List<GapDto> gapSeries = actualLogs.stream()
+                .map(log -> new GapDto(log.getMeasuredAt(), log.getPrediction(), log.getActual()))
+                .collect(Collectors.toList());
 
-        List<AnomalyMarkerDto> anomalyMarkers = anomalies.stream()
-                .filter(anomaly -> anomaly.getDetectedAt() != null)
-                .map(anomaly -> AnomalyMarkerDto.builder()
-                        .eventId(anomaly.getId())
-                        .ts(anomaly.getDetectedAt())
-                        .type(anomaly.getType())
-                        .severity(anomaly.getSeverity())
-                        .status(anomaly.getStatus())
-                        .summary(anomaly.getSummary())
+        List<Anomaly> anomalyLogs = anomalyRepository.findByPowerPlantIdAndDetectedAtBetweenOrderByDetectedAtAsc(plantId, start, end);
+        List<DashboardTimelineResponse.AnomalyMarker> anomalyMarkers = anomalyLogs.stream()
+                .map(log -> DashboardTimelineResponse.AnomalyMarker.builder()
+                        .eventId(log.getId())
+                        .detectedAt(log.getDetectedAt())
+                        .severity(log.getSeverity())
+                        .summary(log.getSummary())
                         .build())
-                .toList();
+                .collect(Collectors.toList());
 
-        DashboardTimelineResponse response = DashboardTimelineResponse.builder()
-                .plantId(powerPlantId)
-                .range(timelineRange.name())
-                .virtualNow(virtualNow)
-                .windowStart(windowStart)
-                .windowEnd(windowEnd)
-                .forecastEnd(forecastEnd)
+        return DashboardTimelineResponse.builder()
+                .plantId(plantId)
+                .lastUpdatedAt(simulationService.getVirtualCurrentTime())
                 .actualSeries(actualSeries)
                 .predictionSeries(predictionSeries)
                 .gapSeries(gapSeries)
                 .anomalyMarkers(anomalyMarkers)
                 .build();
-
-        // 캐시에 저장
-        timelineCache.put(powerPlantId, response);
-        timelineCacheVirtualNow.put(powerPlantId, lastTick != null ? lastTick : virtualNow);
-
-        return response;
     }
-
-    private GapPointDto toGapPoint(PlantFeatureLog log) {
-        double actual = log.getActual();
-        double prediction = log.getPrediction();
-        double absGap = Math.abs(actual - prediction);
-        double denominator = Math.max(Math.abs(prediction), 1e-9);
-        double gapRate = absGap / denominator;
-
-        return GapPointDto.builder()
-                .ts(log.getMeasuredAt())
-                .absGap(absGap)
-                .gapRate(gapRate)
-                .build();
-    }
-
-    private enum TimelineRange {
-        DAY(24, 24),
-        WEEK(24 * 7, 48),
-        MONTH(24 * 30, 72);
-
-        private final int windowHours;
-        private final int defaultFutureHours;
-
-        TimelineRange(int windowHours, int defaultFutureHours) {
-            this.windowHours = windowHours;
-            this.defaultFutureHours = defaultFutureHours;
-        }
-
-        public int windowHours() {
-            return windowHours;
-        }
-
-        public int defaultFutureHours() {
-            return defaultFutureHours;
-        }
-
-        public static TimelineRange from(String value) {
-            if (value == null || value.isBlank()) {
-                return DAY;
-            }
-            try {
-                return TimelineRange.valueOf(value.trim().toUpperCase(Locale.ROOT));
-            } catch (IllegalArgumentException ex) {
-                return DAY;
-            }
-        }
-    }
-
-    // 패널 히트맵 기능은 제거됨 (PanelHeatmapDto 삭제에 따라 관련 로직 정리)
-
 }
